tests/snapshots/integration__integration_tests__list__json_with_display_fields.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpvFchbF/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "type": "worktree",
    "path": "[REPO]",
    "head_sha": "a27cd57d20a6211799da676e70edefa5152f99fe",
    "branch": "main",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "timestamp": 0,
    "commit_message": "Main commit 2",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "has_conflicts": false,
    "is_primary": true,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "working_tree": "",
      "user_status": null
    }
  },
  {
    "type": "worktree",
    "path": "[WORKTREE_FEATURE_AHEAD]",
    "head_sha": "f16cd37915d5ee93903252f5cf877c76c54f3d50",
    "branch": "feature-ahead",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "timestamp": 0,
    "commit_message": "Feature commit 2",
    "ahead": 2,
    "behind": 2,
    "branch_diff": {
      "added": 1,
      "deleted": 0
    },
    "working_tree_diff": {
      "added": 1,
      "deleted": 1
    },
    "worktree_state": null,
    "has_conflicts": false,
    "is_primary": false,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "↕",
      "upstream_divergence": "",
      "working_tree": "?!",
      "user_status": null
    },
    "commits_display": "/u001b[32m↑2/u001b[0m /u001b[2m/u001b[31m↓2/u001b[0m",
    "branch_diff_display": "/u001b[32m+1/u001b[0m",
    "status_display": "/u001b[36m?!/u001b[0m  ↕    ",
    "working_diff_display": "/u001b[32m+1/u001b[0m /u001b[31m-1/u001b[0m"
  },
  {
    "type": "worktree",
    "path": "[WORKTREE_FEATURE_BEHIND]",
    "head_sha": "6c3da84215d400bf6e05a7f9cd1efcfbd825b9e9",
    "branch": "feature-behind",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "timestamp": 0,
    "commit_message": "Initial commit on main",
    "ahead": 0,
    "behind": 2,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "has_conflicts": false,
    "is_primary": false,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "∅",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "↓",
      "upstream_divergence": "",
      "working_tree": "",
      "user_status": null
    },
    "commits_display": "/u001b[2m/u001b[31m↓2/u001b[0m",
    "status_display": "   ↓ /u001b[2m∅/u001b[0m  "
  }
]

----- stderr -----
